# kraken-trades

./: .gitignore  Cargo.toml  README.md  kraken_futures_key_example.json
src/: cli.rs  lib.rs  main.rs
src/clients/: api.rs  kraken_futures.rs  mod.rs
src/core/: credentials.rs  error.rs  mod.rs  rate_limit.rs  requests.rs  trade.rs
