[package]
name = "kraken-trades"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.40"
clap = { version = "4.5.35", features = ["derive"] }
csv = "1.3.1"
env_logger = "0.11.8"
hmac = "0.12.1"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
rust_decimal = "1.37.1"
rust_decimal_macros = "1.37.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
